dataset1235/2025-2/805158916/users/2488736387/executions/2651470117_3691284457.log
== SUBMISSION (2025-08-25 15:06:34)
-- CODE: 
notal1 = float(input())
notal2 = float(input())
notal3 = float(input())
notal4 = float(input())
soma_pesos = 1 + 2 + 3 + 4
media_poderada = ((notal + 1) + (notal + 2) + (notal + 3) + (notal + 4))/soma_pesos
print(round(media_poderada, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_poderada = ((notal + 1) + (notal + 2) + (notal + 3) + (notal + 4))/soma_pesos
                       ^^^^^
NameError: name 'notal' is not defined. Did you mean: 'notal1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_poderada = ((notal + 1) + (notal + 2) + (notal + 3) + (notal + 4))/soma_pesos
                       ^^^^^
NameError: name 'notal' is not defined. Did you mean: 'notal1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_poderada = ((notal + 1) + (notal + 2) + (notal + 3) + (notal + 4))/soma_pesos
                       ^^^^^
NameError: name 'notal' is not defined. Did you mean: 'notal1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_poderada = ((notal + 1) + (notal + 2) + (notal + 3) + (notal + 4))/soma_pesos
                       ^^^^^
NameError: name 'notal' is not defined. Did you mean: 'notal1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_poderada = ((notal + 1) + (notal + 2) + (notal + 3) + (notal + 4))/soma_pesos
                       ^^^^^
NameError: name 'notal' is not defined. Did you mean: 'notal1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_poderada = ((notal + 1) + (notal + 2) + (notal + 3) + (notal + 4))/soma_pesos
                       ^^^^^
NameError: name 'notal' is not defined. Did you mean: 'notal1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:07:27)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())
soma_pesos = 1 + 2 + 3 + 4
media_poderada = ((nota1 + 1) + (nota2 + 2) + (nota3 + 3) + (nota4 + 4))/soma_pesos
print(round(media_poderada, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
3.96
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
4.25
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
3.8
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
2.9
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
11.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
3.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:06:56)
-- CODE: 
notal1 = float(input())
notal2 = float(input())
notal3 = float(input())
notal4 = float(input())
soma_pesos = 1 + 2 + 3 + 4
media_poderada = ((notal1 + 1) + (notal2 + 2) + (notal3 + 3) + (notal4 + 4))/soma_pesos
print(round(media_poderada, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
3.96
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
4.25
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
3.8
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
2.9
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
11.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
3.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:17:40)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())
soma_pesos = 1 + 2 + 3 + 4
media_poderada = ((nota1 * 1) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4))/soma_pesos
print(round(media_poderada, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:14:05)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())
soma_pesos = 1 + 2 + 3 + 4
media_poderada = ((nota1 + 1) + (nota2 + 2) + (nota3 + 3) + (nota4 + 4))/soma_pesos
print(round(media_poderada, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
3.96
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
4.25
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
3.8
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
2.9
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
11.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
3.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
